--- a/myapp/src/App.css
+++ b/myapp/src/App.css
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:wght@400;500&family=Lora:wght@400;500&family=Poppins:wght@400;600&display=swap");
 
 * {
   margin: 0;
@@ -148,7 +147,7 @@ input {
 .movie-section {
   width: 100%;
   height: 100vh;
-   background-color: rgb(25, 74, 62);
+  background-color: rgb(25, 74, 62);
   display: grid;
   place-items: center;
 }
@@ -219,7 +218,7 @@ a {
   margin-top: 2rem;
   padding: 1rem 3rem;
   /* background-color: var(--text-clr); */
-  color: var(--text-clr);
+  color: rgb(24, 22, 59);
   border: 0.2rem solid var(--text-clr);
   font-size: 1.8rem;
   border-radius: 0.5rem;
@@ -227,7 +226,7 @@ a {
 }
 
 a:hover {
- background-color: rgb(25, 74, 62);
+  background-color: rgb(25, 74, 62);
   color: var(--bg-clr);
 }
 
@@ -409,5 +408,30 @@ a:hover img {
   }
   .grid-4-col {
     grid-template-columns: 1fr;
+  }
+  .navbar ul{
+    margin-top: -8px;
+    margin-left: 18%;
+  }
+  .front{
+    width: 109%;
+
+  }
+
+  .front img{
+    width: 20%;
+    height: 27%;
+    margin-left: 76%;
+    margin-top: 19%;
+  }
+
+  .social-icons a{
+    margin-right: -3px;
+
+  }
+
+  .footer-bottom{
+    width: 201%;
+    margin-left: -36%;
   }
 }
